Create login mechanism #2 #3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ParkNet</string>
+    <string name="emailHint">Email</string>
+    <string name="passwordHint">Password</string>
+    <string name="loginButton">Login</string>
+    <string name="logoutButton">Logout</string>
+    <string name="title_activity_main">What do you want to do?</string>
 </resources>
