Enhanced design of rent activity #8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="pickTime">Choose</string>
     <string name="chooseDate">Pick Date</string>
     <string name="endTimeLabel">End Time:</string>
+    <string name="book">Book Now!</string>
 </resources>
